# karsa-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: sync-to-monorepo.yml
app/: __init__.py  main.py  tools.py
app/api/: routes.py
app/core/: ai_client.py  config.py  security.py
app/models/: __init__.py  action.py
app/utils/: __init__.py  date_parser.py  entity_resolver.py
scripts/: test_sumopod.py
tests/: conftest.py  test_action_models.py  test_ai_client_tools.py  test_date_parser.py  test_entity_resolver.py  test_routes_create_entities.py  test_tools.py
